<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".study.study">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/intro"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/html"
        android:foregroundGravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/html"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="600dp"
        android:text="@string/html"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="700dp"
        android:background="@drawable/css"
        android:foregroundGravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/css"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="950dp"
        android:text="@string/css"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="1110dp"
        android:background="@drawable/python"
        android:foregroundGravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/python"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="1300dp"
        android:text="@string/python"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="1400dp"
        android:background="@drawable/java"
        android:foregroundGravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/java"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="1600dp"
        android:text="@string/java"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exit"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="1730dp"
        android:text="@string/exit"
        android:textSize="20dp"
        android:textStyle="bold"/>

</RelativeLayout>
</ScrollView>